--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,7 @@
  *
 */
 
+
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
@@ -39,3 +40,8 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+// Turn off blue underlines for hyperlinks
+a {
+    text-decoration: none;
+}
