--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -65,7 +65,7 @@ $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 /*$info-color                 : #52adc8;*/
-$info-color                 : #1f404b;
+$info-color                 : #AAC5E2;
 
 /* brands */
 $behance-color              : #1769FF;
