--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,7 +64,7 @@ $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #0072b1;
+$info-color                 : #AAC5E2;
 
 
 /* brands */
