--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,11 +60,11 @@ $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
 
-$primary-color              : #7a8288;
+$primary-color              : $dark-gray;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #66b3ff;
+$info-color                 : #52adc8;
 
 
 /* brands */
